Introduccion de tablas de cada entidad.

--- a/Noviembre.web/Web.config
+++ b/Noviembre.web/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="connectionString" connectionString="server=localhost:3306;database=noviembredb;uid=root;password=47400Ibe**"/>
+		<add name="connectionString" connectionString="server=localhost;database=noviembredb;uid=root;password=47400Ibe**"/>
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
