--- a/Noviembre.web/Views/Web.config
+++ b/Noviembre.web/Views/Web.config
@@ -7,7 +7,9 @@
       <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
     </sectionGroup>
   </configSections>
-
+    <connectionStrings>
+		<add name="connectionString" connectionString="server=127.0.0.1;database=noviembredb;uid=root;password=47400Ibe**"/>
+	</connectionStrings>
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.9.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
